[BE] refactor: Service 통합, 환경변수 Properties 클래스로부터 받도록 변경 (#22)

--- a/src/backend/chat-server/src/main/resources/application.yml
+++ b/src/backend/chat-server/src/main/resources/application.yml
@@ -11,13 +11,17 @@ eureka:
 spring:
   application:
     name: chat-server
+  kafka:
+    topic:
+      direct-chat: direct-chat-topic
+      read-status: read-status-topic
 
 management:
   endpoints:
     web:
       exposure:
         include: refresh, health, beans, refresh
-
+    
 logging:
   level:
     com.asyncgate.chat_server: DEBUG
