--- a/src/backend/signaling-server/build.gradle
+++ b/src/backend/signaling-server/build.gradle
@@ -64,6 +64,20 @@ dependencies {
 	// mysql
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+	// WebSocket
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+
+	// sockjs
+	implementation 'org.webjars:sockjs-client:1.5.1'
+	// stomp
+	implementation 'org.webjars:stomp-websocket:2.3.4'
+	// gson
+	implementation 'com.google.code.gson:gson:2.9.0'
+
+	/* Kurento 미디어 서버 관련 2개 */
+	// https://mvnrepository.com/artifact/org.kurento/kurento-client
+	implementation group: 'org.kurento', name: 'kurento-client', version: '6.18.0'
 }
 
 dependencyManagement {
