[BE] setting: chat-server mongoDB Image docker-copmpose up (#22)

--- a/.github/actions/ecr-push/action.yml
+++ b/.github/actions/ecr-push/action.yml
@@ -205,6 +205,20 @@ runs:
               echo "    restart: unless-stopped" >> docker-compose.yml
             fi
 
+            if [ "${{ inputs.container_name }}" == "chat-server" ]; then
+              echo "  mongo:" >> docker-compose.yml
+              echo "    image: mongo:latest" >> docker-compose.yml
+              echo "    container_name: mongo" >> docker-compose.yml
+              echo "    ports:" >> docker-compose.yml
+              echo "      - \"27017:27017\"" >> docker-compose.yml
+              echo "    restart: unless-stopped" >> docker-compose.yml
+              echo "    volumes:" >> docker-compose.yml
+              echo "      - mongo_data:/data/db" >> docker-compose.yml
+            fi
+
+            echo "volumes:" >> docker-compose.yml
+            echo "  mongo_data:" >> docker-compose.yml
+
           else
             echo "Unknown namespace: ${{ inputs.namespace }}"
             exit 1
