[BE] fix: topic 이름 변경 (#22)

--- a/src/backend/chat-server/src/main/resources/application.yml
+++ b/src/backend/chat-server/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
     name: chat-server
   kafka:
     topic:
-      direct-chat: direct-chat-topic
+      direct-message: direct-message-topic
       read-status: read-status-topic
 
 management:
