[BE] fix: Dockerfile build test 포함하여 실행 (#60)

--- a/src/backend/chat-server/Dockerfile
+++ b/src/backend/chat-server/Dockerfile
@@ -9,7 +9,7 @@ RUN apk add --no-cache gradle
 COPY . /app
 
 # Gradle 빌드 실행 (gradlew 없이 Gradle 직접 실행)
-RUN gradle clean build -x test
+RUN gradle clean build
 
 # 실행 단계
 FROM amazoncorretto:17-alpine
