[BE] fix: config value branch 변경 (#58)

--- a/src/backend/config-server/src/main/resources/application.yml
+++ b/src/backend/config-server/src/main/resources/application.yml
@@ -11,7 +11,8 @@ spring:
           enabled: true
         git:
           uri: https://github.com/sgdevcamp2025/asyncgate
-          default-label: main
+#          default-label: main
+          default-label: be/feat/22/direct-message
           search-paths:
             - "config"
 
