--- a/src/backend/config-server/src/main/resources/application.yml
+++ b/src/backend/config-server/src/main/resources/application.yml
@@ -11,8 +11,7 @@ spring:
           enabled: true
         git:
           uri: https://github.com/sgdevcamp2025/asyncgate
-#          default-label: main
-          default-label: be/feat/22/direct-message
+          default-label: main
           search-paths:
             - "config"
 
