--- a/src/backend/signaling-server/src/main/resources/application.yml
+++ b/src/backend/signaling-server/src/main/resources/application.yml
@@ -11,6 +11,24 @@ eureka:
 spring:
   application:
     name: signaling-server
+  data:
+    mongodb:
+      host: mongodb://mongodb:27017/signaling
+      port: 27017
+      database: signaling
+
+turn:
+  server:
+    urls: turn:13.125.99.229:3478
+    username: myUsername
+    credential: myPassword
+
+stun:
+  server:
+    urls: stun:stun.l.google.com:19302
+
+kms:
+  url: ws://13.125.99.229:8890/kurento
 
 management:
   endpoints:
