--- a/src/backend/signaling-server/src/main/resources/application.yml
+++ b/src/backend/signaling-server/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
     name: signaling-server
   data:
     mongodb:
-      host: mongodb://mongodb:27017/signaling
+      host: mongodb
       port: 27017
       database: signaling
 
