[BE] refactor: mongodb 네이밍 변경 (#30)
Signed-off-by: EunJiJung <bianbbc87@gmail.com>

--- a/.github/actions/ecr-push/action.yml
+++ b/.github/actions/ecr-push/action.yml
@@ -217,7 +217,7 @@ runs:
             fi
 
             if [ "${{ inputs.container_name }}" == "signaling-server" ]; then
-              echo "  redis:" >> docker-compose.yml
+              echo "  mongodb:" >> docker-compose.yml
               echo "    image: mongo:latest" >> docker-compose.yml
               echo "    container_name: mongodb" >> docker-compose.yml
               echo "    ports:" >> docker-compose.yml
