[BE] refactor: redis도 추가 (#30)
Signed-off-by: EunJiJung <bianbbc87@gmail.com>

--- a/.github/actions/ecr-push/action.yml
+++ b/.github/actions/ecr-push/action.yml
@@ -225,6 +225,12 @@ runs:
               echo "    restart: unless-stopped" >> docker-compose.yml
               echo "    volumes:" >> docker-compose.yml
               echo "      - mongo_data:/data/db" >> docker-compose.yml
+              echo "  redis:" >> docker-compose.yml
+              echo "    image: redis:latest" >> docker-compose.yml
+              echo "    container_name: redis" >> docker-compose.yml
+              echo "    ports:" >> docker-compose.yml
+              echo "      - \"6379:6379\"" >> docker-compose.yml
+              echo "    restart: unless-stopped" >> docker-compose.yml
             fi
 
             echo "volumes:" >> docker-compose.yml
