[BE] refactor: mongo db localhost로 변경 (#30)
Signed-off-by: EunJiJung <bianbbc87@gmail.com>

--- a/src/backend/signaling-server/src/main/resources/application.yml
+++ b/src/backend/signaling-server/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
     name: signaling-server
   data:
     mongodb:
-      host: mongodb
+      host: localhost
       port: 27017
       database: signaling
 
