--- a/src/backend/apigateway-server/src/main/resources/application.yml
+++ b/src/backend/apigateway-server/src/main/resources/application.yml
@@ -86,12 +86,12 @@ spring:
         - id: signaling-server
           uri: lb://SIGNALING-SERVER
           predicates:
-            - Path=/signaling/**
+            - Path=/signalings/**
           filters:
             - RemoveRequestHeader=Cookie
-            - RewritePath=/signaling/(?<segment>.*), /$\{segment}
+            - RewritePath=/signalings/(?<segment>.*), /$\{segment}
             - AuthorizationHeaderFilter      
-              
+
       default-filters:
         - DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials
       globalcors:
