[BE] fix: chat-server HandShake, Authorize 오류 해결 및 연동 (#79)
* [BE] fix: chat-server docker compose port binding (#77)

* [BE] test: Chat-server 오류 테스트1 (#77)

* [BE] test: Chat-server 오류 테스트2 (#77)

* [BE] fix: chat-server Error test1 (#77)

* [BE] fix: action.yml 원복 (#77)

* [BE] fix: chatserver test4 (#77)

* [BE] fix: chatserver test5 (#77)

* [BE] fix: chatserver test6 (#77)

* [BE] test: Chat-server 오류 테스트7 (#77)

* [BE] test: config Server Test8  (#64)

* [BE] test: Chat-server 오류 테스트8 (#77)

* [BE] test: config Server Test9  (#64)

* [BE] test: config Server Test11  (#64)

* [BE] test: Chat-server 오류 테스트12 (#77)

* [BE] test: Chat-server 오류 테스트13 (#77)

* [BE] test: Chat-server 오류 테스트14 (#77)

* [BE] test: Chat-server 오류 테스트15 (#77)

* [BE] test: Chat-server 오류 테스트16 (#77)

* [BE] test: Chat-server 오류 테스트17 (#77)

* [BE] test: Chat-server 오류 테스트18 (#77)

* [BE] test: Chat-server 오류 테스트19 (#77)

* [BE] test: Chat-server 오류 테스트20 (#77)

* [BE] test: Chat-server 오류 테스트21 (#77)

* [BE] test: Chat-server 오류 테스트22 (#77)

* [BE] test: Chat-server 오류 테스트23 (#77)

* [BE] test: Chat-server 오류 테스트24 (#77)

* [BE] test: Chat-server 오류 테스트25 (#77)

* [BE] test: Chat-server 오류 테스트26 (#77)

* [BE] test: Chat-server 오류 테스트27 (#77)

* [BE] test: Chat-server 오류 테스트28 (#77)

* [BE] test: Chat-server 오류 테스트29 (#77)

* [BE] test: Chat-server 오류 테스트30 (#77)

* [BE] test: Chat-server 오류 테스트31 (#77)

* [BE] test: Chat-server 오류 테스트32 (#77)

* [BE] test: Chat-server 오류 테스트33 (#77)

* [BE] test: Chat-server 오류 테스트34 (#77)

* [BE] test: Chat-server 오류 테스트35 (#77)

* [BE] test: Chat-server 오류 테스트36 (#77)

* [BE] test: Chat-server 몽고디비 연결 (#77)

* [BE] refactor: Chat-server 최종 리팩토링 (#77)

--- a/.github/actions/ecr-push/action.yml
+++ b/.github/actions/ecr-push/action.yml
@@ -189,23 +189,25 @@ runs:
             echo "version: '3.8'" > docker-compose.yml
             echo "" >> docker-compose.yml
             echo "services:" >> docker-compose.yml
-            echo "  ${{ inputs.container_name }}:" >> docker-compose.yml
-            echo "    image: ${{ inputs.ecr_uri }}/${{ inputs.namespace }}/${{ inputs.ecr_repo }}:${{ github.sha }}" >> docker-compose.yml
-            echo "    network_mode: host" >> docker-compose.yml
-            echo "    container_name: ${{ inputs.container_name }}" >> docker-compose.yml
-            echo "    restart: unless-stopped" >> docker-compose.yml
-
-
-            if [ "${{ inputs.container_name }}" == "user-server" ]; then
-              echo "  redis:" >> docker-compose.yml
-              echo "    image: redis:latest" >> docker-compose.yml
-              echo "    container_name: redis" >> docker-compose.yml
-              echo "    ports:" >> docker-compose.yml
-              echo "      - \"6379:6379\"" >> docker-compose.yml
-              echo "    restart: unless-stopped" >> docker-compose.yml
-            fi
 
             if [ "${{ inputs.container_name }}" == "chat-server" ]; then
+              # chat-server 전용 설정 (MongoDB 의존성 및 Healthcheck 추가)
+              echo "  chat-server:" >> docker-compose.yml
+              echo "    image: ${{ inputs.ecr_uri }}/${{ inputs.namespace }}/${{ inputs.ecr_repo }}:${{ github.sha }}" >> docker-compose.yml
+              echo "    container_name: chat-server" >> docker-compose.yml
+              echo "    ports:" >> docker-compose.yml
+              echo "      - \"8700:8700\"" >> docker-compose.yml  # 외부 포트 8700 고정
+              echo "    depends_on:" >> docker-compose.yml
+              echo "      mongo:" >> docker-compose.yml
+              echo "        condition: service_healthy" >> docker-compose.yml
+              echo "    healthcheck:" >> docker-compose.yml
+              echo "      test: [\"CMD-SHELL\", \"curl -f http://chat-server:8700/actuator/health || exit 1\"]" >> docker-compose.yml
+              echo "      interval: 10s" >> docker-compose.yml
+              echo "      timeout: 5s" >> docker-compose.yml
+              echo "      retries: 2" >> docker-compose.yml
+              echo "    restart: unless-stopped" >> docker-compose.yml
+
+              # MongoDB
               echo "  mongo:" >> docker-compose.yml
               echo "    image: mongo:latest" >> docker-compose.yml
               echo "    container_name: mongo" >> docker-compose.yml
@@ -214,6 +216,31 @@ runs:
               echo "    restart: unless-stopped" >> docker-compose.yml
               echo "    volumes:" >> docker-compose.yml
               echo "      - mongo_data:/data/db" >> docker-compose.yml
+              echo "    healthcheck:" >> docker-compose.yml
+              echo "      test: [\"CMD-SHELL\", \"mongosh --quiet --eval \\\"db.adminCommand({ ping: 1 })\\\" || exit 1\"]" >> docker-compose.yml
+              echo "      interval: 10s" >> docker-compose.yml
+              echo "      timeout: 10s" >> docker-compose.yml
+              echo "      retries: 5" >> docker-compose.yml
+              echo "      start_period: 30s" >> docker-compose.yml
+
+
+            else
+              # 일반 서비스 블록 (chat-server가 아닌 경우)
+              echo "  ${{ inputs.container_name }}:" >> docker-compose.yml
+              echo "    image: ${{ inputs.ecr_uri }}/${{ inputs.namespace }}/${{ inputs.ecr_repo }}:${{ github.sha }}" >> docker-compose.yml
+              echo "    network_mode: host" >> docker-compose.yml
+              echo "    container_name: ${{ inputs.container_name }}" >> docker-compose.yml
+              echo "    restart: unless-stopped" >> docker-compose.yml
+            fi
+
+            # user-server인 경우 redis 추가
+            if [ "${{ inputs.container_name }}" == "user-server" ]; then
+              echo "  redis:" >> docker-compose.yml
+              echo "    image: redis:latest" >> docker-compose.yml
+              echo "    container_name: redis" >> docker-compose.yml
+              echo "    ports:" >> docker-compose.yml
+              echo "      - \"6379:6379\"" >> docker-compose.yml
+              echo "    restart: unless-stopped" >> docker-compose.yml
             fi
 
             echo "volumes:" >> docker-compose.yml
@@ -232,5 +259,4 @@ runs:
         key: ${{ inputs.ec2_ssh_key }}
         script: |
           sudo docker compose up -d
-
 
