[BE] refactor: signaling server - => _로 변경 (#30)
Signed-off-by: EunJiJung <bianbbc87@gmail.com>

--- a/src/backend/apigateway-server/src/main/resources/application.yml
+++ b/src/backend/apigateway-server/src/main/resources/application.yml
@@ -83,8 +83,8 @@ spring:
             - RewritePath=/users/(?<segment>.*), /$\{segment}
             - AuthorizationHeaderFilter
 
-        - id: signaling-server
-          uri: lb://SIGNALING-SERVER
+        - id: signaling_server
+          uri: lb://SIGNALING_SERVER
           predicates:
             - Path=/signalings/**
           filters:
