--- a/src/backend/signaling-server/src/main/resources/application.yml
+++ b/src/backend/signaling-server/src/main/resources/application.yml
@@ -10,7 +10,7 @@ eureka:
 
 spring:
   application:
-    name: signaling-server
+    name: signaling_server
   data:
     mongodb:
       host: localhost
