[BE] refactor: signaling _ -> -로 변경 (#30)
Signed-off-by: EunJiJung <bianbbc87@gmail.com>

--- a/src/backend/signaling-server/src/main/resources/application.yml
+++ b/src/backend/signaling-server/src/main/resources/application.yml
@@ -10,7 +10,7 @@ eureka:
 
 spring:
   application:
-    name: signaling_server
+    name: signaling-server
   data:
     mongodb:
       host: localhost
