--- a/src/backend/apigateway-server/src/main/resources/application.yml
+++ b/src/backend/apigateway-server/src/main/resources/application.yml
@@ -83,8 +83,8 @@ spring:
             - RewritePath=/users/(?<segment>.*), /$\{segment}
             - AuthorizationHeaderFilter
 
-        - id: signaling_server
-          uri: lb://SIGNALING_SERVER
+        - id: signaling-server
+          uri: lb://SIGNALING-SERVER
           predicates:
             - Path=/signalings/**
           filters:
