--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
     "styled-components": "^6.1.14",
+    "vite-plugin-mkcert": "^1.17.6",
     "websocket": "^1.0.35",
     "zustand": "^5.0.3"
   },
