--- a/src/backend/chat-server/Dockerfile
+++ b/src/backend/chat-server/Dockerfile
@@ -9,7 +9,7 @@ RUN apk add --no-cache gradle
 COPY . /app
 
 # Gradle 빌드 실행 (gradlew 없이 Gradle 직접 실행)
-RUN gradle clean build
+RUN gradle clean build -Dspring.profiles.active=prod
 
 # 실행 단계
 FROM amazoncorretto:17-alpine
