[BE] setting: 모든 서버 application.yml local, prod 분리 (#85)

--- a/src/backend/apigateway-server/src/main/resources/application-local.yml
+++ b/src/backend/apigateway-server/src/main/resources/application-local.yml
@@ -10,6 +10,8 @@ eureka:
 spring:
   application:
     name: apigateway-server
+  profiles:
+    active: local
   cloud:
     gateway:
       routes:
