--- a/src/backend/notification-server/src/main/resources/application-prod.yml
+++ b/src/backend/notification-server/src/main/resources/application-prod.yml
@@ -10,7 +10,9 @@ eureka:
 
 spring:
   application:
-    name: guild-server
+    name: notification-server
+  profiles:
+    active: prod
 
 management:
   endpoints:
@@ -18,13 +20,6 @@ management:
       exposure:
         include: refresh, health, beans, refresh
 
-springdoc:
-  api-docs:
-    path: /v3/api-docs
-  swagger-ui:
-    path: /swagger-ui.html
-    config-url: /guilds/v3/api-docs/swagger-config
-    url: /guilds/v3/api-docs
-    operationsSorter: method
-    tagsSorter: alpha
-    tryItOutEnabled: true
+logging:
+  level:
+    com.asyncgate.notification_server: DEBUG
