--- a/src/backend/guild-server/src/main/resources/application-prod.yml
+++ b/src/backend/guild-server/src/main/resources/application-prod.yml
@@ -10,8 +10,9 @@ eureka:
 
 spring:
   application:
-    name: user-server
-
+    name: guild-server
+  profiles:
+    active: prod
 
 management:
   endpoints:
@@ -19,17 +20,13 @@ management:
       exposure:
         include: refresh, health, beans, refresh
 
-logging:
-  level:
-    com.asyncgate.user_server: DEBUG
-
 springdoc:
   api-docs:
     path: /v3/api-docs
   swagger-ui:
     path: /swagger-ui.html
-    config-url: /users/v3/api-docs/swagger-config
-    url: /users/v3/api-docs
+    config-url: /guilds/v3/api-docs/swagger-config
+    url: /guilds/v3/api-docs
     operationsSorter: method
     tagsSorter: alpha
     tryItOutEnabled: true
