--- a/src/backend/signaling-server/src/main/resources/application-prod.yml
+++ b/src/backend/signaling-server/src/main/resources/application-prod.yml
@@ -11,6 +11,8 @@ eureka:
 spring:
   application:
     name: signaling-server
+  profiles:
+    active: prod
   data:
     mongodb:
       host: localhost
