[BE] setting: Dockerfile 모든 서버 prod 프로필 적용 (#85)

--- a/src/backend/apigateway-server/Dockerfile
+++ b/src/backend/apigateway-server/Dockerfile
@@ -17,4 +17,4 @@ WORKDIR /app
 
 COPY --from=builder /app/build/libs/*.jar app.jar
 
-CMD ["java", "-jar", "app.jar"]
+CMD ["java", "-Dspring.profiles.active=prod", "-jar", "app.jar"]
