--- a/src/backend/user-server/Dockerfile
+++ b/src/backend/user-server/Dockerfile
@@ -17,4 +17,4 @@ WORKDIR /app
 
 COPY --from=builder /app/build/libs/*.jar app.jar
 
-CMD ["java", "-jar", "app.jar"]
+CMD ["java", "-Dspring.profiles.active=prod", "-jar", "app.jar"]
