[BE] refactor: member profile get room/profile에 jwt 검증 제거 (#98)
Signed-off-by: EunJiJung <bianbbc87@gmail.com>

--- a/src/backend/apigateway-server/src/main/resources/application-prod.yml
+++ b/src/backend/apigateway-server/src/main/resources/application-prod.yml
@@ -91,30 +91,13 @@ spring:
             - RewritePath=/users/(?<segment>.*), /$\{segment}
             - AuthorizationHeaderFilter
 
-        - id: signaling-server
-          uri: lb://SIGNALING-SERVER
+        - id: user-server
+          uri: lb://USER-SERVER
           predicates:
-            - Path=/signalings/**
+            - Path=/users/room/profile
           filters:
             - RemoveRequestHeader=Cookie
-            - RewritePath=/signalings/(?<segment>.*), /$\{segment}
-            - AuthorizationHeaderFilter
-
-        - id: signaling-server
-          uri: ws://SIGNALING-SERVER
-          predicates:
-            - Path=/signalings/**
-          filters:
-            - RemoveRequestHeader=Cookie
-            - RewritePath=/signalings/(?<segment>.*), /$\{segment}
-          
-        - id: signaling-server
-          uri: wss://SIGNALING-SERVER
-          predicates:
-            - Path=/signalings/**
-          filters:
-            - RemoveRequestHeader=Cookie
-            - RewritePath=/signalings/(?<segment>.*), /$\{segment}
+            - RewritePath=/users/(?<segment>.*), /$\{segment}
 
         - id: chat-server
           uri: lb://CHAT-SERVER
