--- a/src/backend/signaling-server/build.gradle
+++ b/src/backend/signaling-server/build.gradle
@@ -87,6 +87,10 @@ dependencies {
 	// aop
 	implementation 'org.springframework.boot:spring-boot-starter-aop'
 
+	// webflux
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+
 }
 
 dependencyManagement {
