[BE] fix: 잘못된 apigateway reoute 수정 (#124)

--- a/src/backend/apigateway-server/src/main/resources/application-prod.yml
+++ b/src/backend/apigateway-server/src/main/resources/application-prod.yml
@@ -105,7 +105,7 @@ spring:
             - Path=/chats/**
           filters:
             - RemoveRequestHeader=Cookie
-            - RewritePath=/users/(?<segment>.*), /$\{segment}
+            - RewritePath=/chats/(?<segment>.*), /$\{segment}
             - AuthorizationHeaderFilter
 
       default-filters:
